--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,8 @@
     --secondary-background:#F5F4FA; /*другорядний колір фону*/
     --footer-contact-color:rgba(255, 255, 255, 0.6);
     --main-footer-background: #2F303A;
+    --color-border-header: rgba(236, 236, 236, 1);
+    --color-galary-element: rgba(238, 238, 238, 1);
 }
 html {
     box-sizing: border-box;
@@ -44,8 +46,13 @@ h6,
 p {
     margin-top: 0;
 }
+
+.header{
+    border-bottom: 1px solid var(--color-border-header);
+}
+
 .container{
-    width: 1230px;
+    width: 1200px;
     padding-left: 15px;
     padding-right: 15px;
     margin: 0 auto;
@@ -74,7 +81,7 @@ p {
     padding-right: 68px;
 }
 
-.logo.footer{
+.logo-footer{
     color: var(--primary-background);
     text-decoration: none;
 
@@ -137,11 +144,12 @@ p {
 
 /* main */
 
-.main .container{
+.main{
     background-color: var(--main-footer-background);
-    width: 1600px;
-    height: 600px;
+    padding-top: 200px;
+    padding-bottom: 200px;
     text-align: center;
+    /* height: 600px; */
 }
 
 .main-title{
@@ -152,9 +160,10 @@ p {
     letter-spacing: 0.06em;
     text-transform: uppercase;
     
-    max-width: 720px;
-    margin: 0 auto 30px;
-    padding-top: 200px;
+    max-width: 696px;
+    margin: auto;
+    margin-bottom: 30px;
+    /* padding-top: 200px; */
 }
 
 .visually-hidden {
@@ -252,21 +261,34 @@ p {
 .galary{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
 }
 
 .galary-element{
     width: 370px;
+    margin-right: 30px;
     margin-bottom: 30px;
+    border: 1px solid var(--color-galary-element);
 }
 
-.galary-element:nth-last-child(-n+3){
+.galary-element:nth-child(3n){
+    margin-right: 0;
+}
+
+.galary-element:nth-last-child(-n+3) {
     margin-bottom: 0;
 }
 
-.galary-element .img,
-.galary-element  .section-subtitle{
-    margin-bottom: 20px;
+.galary-container{
+    padding: 20px 24px;
+}
+
+.galary-list, .team-element{
+    margin-right: 30px;
+}
+
+.galary-list:last-child,
+.team-element:last-child {
+    margin-right: 0;
 }
 
 .team-element .section-team,
@@ -281,17 +303,30 @@ p {
 
 }
 
+.team-element{
+border-radius: 0px 0px 4px 4px;
+box-shadow: 0px 1px 3px rgb(0 0 0 / 12%),
+0px 1px 1px rgb(0 0 0 / 14%),
+0px 2px 1px rgb(0 0 0 / 20%);
+background-color: var(--primary-background);
+}
+
 .team-element .section-team{
     margin-bottom: 10px;
 }
 
-.galary-element .section-subtitle{
-    margin-left: 24px;
+.team-element .section-subtitle {
+    color: var(--title-text-color);
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.18;
+
+    margin-bottom: 30px;
 }
+
 .galary-element .section-title{
     margin-bottom: 4px;
     text-align: left;
-    margin-left: 24px;
 }
 
 .galary .section-title{
@@ -316,15 +351,19 @@ p {
     margin-bottom: 10px;
 }
 
-.galary .section-subtitle{
+.galary-element .section-subtitle{
+    font-weight: 400;
     font-size: 16px;
     line-height: 1.88;
+
+    margin-bottom: 0;
 }
 
 .section-description{
     color: var(--title-text-color);
     font-size: 14px;
     line-height: 1.71;
+    
     margin-bottom: 0;
 }
 
@@ -338,14 +377,10 @@ p {
     line-height: 1.18;
 }
 
-.team .section-subtitle{
-    color: var(--title-text-color);
-    font-size: 16px;
-    line-height: 1.18;
-}
-
 .footer{
     background-color: var(--main-footer-background);
+    padding-top: 60px;
+    padding-bottom: 60px;
 }
 
 .footer .address{
@@ -366,8 +401,6 @@ p {
 .footer-container{
     margin-top: 0;
     margin-bottom: 0;
-    padding-top: 60px;
-    padding-bottom: 60px;
 }
 
 .footer-info{
